#38 Fix: Horizontal scroll using flexbox

--- a/style/components/board.css
+++ b/style/components/board.css
@@ -18,19 +18,17 @@
 }
 
 .board .lists {
-  grid-column: center-start / -1;
-  display: grid;
-  grid-auto-flow: column;
+  display: flex;
   gap: 1rem;
-  overflow: auto;
+  overflow-x: auto;
 }
 
 .board .lists .list {
   background-color: var(--color-grey);
   border-radius: 16px;
   padding: 1rem;
-  min-width: 20rem;
-  max-width: 100%;
+  flex-shrink: 0;
+  max-width: 20rem;
 }
 
 .board .lists .list > *:not(:last-child) {
